[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Themes/Nodes/Normal/Dialogue.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Themes/Nodes/Selected/DialogueSelected.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/BaseNode.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/Nodes/Normal/line.tres" type="StyleBox" id=4]

[node name="Dialogue" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -506.0
margin_top = -294.0
margin_right = -305.0
margin_bottom = -219.0
mouse_filter = 1
custom_styles/frame = ExtResource( 1 )
custom_styles/selectedframe = ExtResource( 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_constants/port_offset = 0
title = "Dialogue Node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="Lines" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 33.0
margin_right = 191.0
margin_bottom = 63.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LineEdit" type="TextEdit" parent="Lines"]
margin_right = 181.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
wrap_enabled = true
caret_blink = true
[connection signal="close_request" from="." to="." method="_on_Node_close_request"]
[connection signal="dragged" from="." to="." method="_on_Node_dragged"]
[connection signal="raise_request" from="." to="." method="_on_Node_raise_request"]
[connection signal="resize_request" from="." to="." method="_on_Node_resize_request"]
[connection signal="resized" from="." to="." method="_on_Node_resized"]
[connection signal="focus_exited" from="Lines/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="request_completion" from="Lines/LineEdit" to="." method="_on_LineEdit_focus_exited"]
